--- a/src/components/Searchwind/Searchwind.css
+++ b/src/components/Searchwind/Searchwind.css
@@ -73,7 +73,7 @@
     display: flex;
     justify-content: center;
 }
-.imageStyling{
+.imageStylin{
     background: none;
     color: inherit;
     border: none;
@@ -87,7 +87,7 @@
     background-color:#FAFBFE;
     
 }
-.textStyling{
+.textStylin{
     color: #ABB6C7;
     font-family: 'Poppins',sans-serif;
     font-size: 18px;
